Fix display block on mobile

--- a/app/assets/stylesheets/_breakpoints.scss
+++ b/app/assets/stylesheets/_breakpoints.scss
@@ -31,6 +31,7 @@
   .panel-nav {
     @include clearfix;
     a {
+      display: block;
       float: right;
     }
   }
